--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -1,13 +1,14 @@
 .section_2{
-    background-image: 
+    /* background-image: 
     linear-gradient(rgba(0, 0, 0, 0.897), rgba(0, 0, 0, 0.766)),
     url("../background/otherground2.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
-    position: relative;
+    position: relative; */
     width: 100%;
-    height: 7000px;
+    padding-bottom: 200px;
+    /* height: 7000px; */
     box-sizing: border-box;
     z-index: 1;
 
