--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat; 
     position: relative; */
     width: 100%;
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
     /* height: 7000px; */
     box-sizing: border-box;
     z-index: 1;
