--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,131 +1,123 @@
-.image_phone{
+.image_phone {
   height: 30vw;
   position: absolute;
   bottom: -15vw;
   left: 0;
 }
 
-form *{
-    font-family: 'Monserrat', 'Times New Roman', Times, serif;
-    font-weight: 200;
-    font-size: 16px
+form * {
+  font-family: "Monserrat", "Times New Roman", Times, serif;
+  font-weight: 200;
+  font-size: 16px;
 }
-.form_container h3{
-    font-family: 'Georama', 'Times New Roman', Times, serif;
-    font-weight: 900;
-    font-size:7vw;
-    color: #F44C06;
+.form_container h3 {
+  font-family: "Georama", "Times New Roman", Times, serif;
+  font-weight: 900;
+  font-size: 7vw;
+  color: #f44c06;
 }
 
-.form_container{
+.form_container {
   margin-top: 10%;
   padding-bottom: 200px;
-padding-left: 41vw;
-height: max-content;
-position: relative;
+  padding-left: 41vw;
+  height: max-content;
+  position: relative;
 }
 
-
-
-
-.form_container form div{
+.form_container form div {
   height: 50px;
 }
-.form_container form{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    grid-template-areas: 
-      "item1 item2"
-      "item3 item3"
-      "item4 item4"
-      "item5 item5"
-      "item6 item6";
-    gap: 5%; /* відступ між елементами */
-    width: 60%;
+.form_container form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
+    "item1 item2"
+    "item3 item3"
+    "item4 item4"
+    "item5 item5"
+    "item6 item6";
+  gap: 5%; /* відступ між елементами */
+  width: 60%;
 }
 .form_container form div input {
-    border: 0;
-    text-decoration: none;
-    width: 100%;
-    height: 100%;
-    color: white;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.442);
+  border: 0;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.442);
 }
-.form_container form input::placeholder{
-    color: rgba(255, 255, 255, 0.467);
+.form_container form input::placeholder {
+  color: rgba(255, 255, 255, 0.467);
 }
 
-.form_container form input:focus{
-    outline: none;
-    border-color: white;
+.form_container form input:focus {
+  outline: none;
+  border-color: white;
 }
 
 .form_container form div input.error {
   border-color: red;
-} 
+}
 
 .form_container form div:nth-of-type(1) {
-    /* Стилізація для першого input (First name) */
-    grid-area: item1;
+  /* Стилізація для першого input (First name) */
+  grid-area: item1;
+}
 
-  }
-  
-  .form_container form div:nth-of-type(2) {
-    /* Стилізація для другого input (Last name) */
-    grid-area: item2;
+.form_container form div:nth-of-type(2) {
+  /* Стилізація для другого input (Last name) */
+  grid-area: item2;
+}
 
-  }
-  
-  .form_container form div:nth-of-type(3) {
-    /* Стилізація для третього input (Email) */
-    grid-area: item3;
+.form_container form div:nth-of-type(3) {
+  /* Стилізація для третього input (Email) */
+  grid-area: item3;
+}
 
-  }
-  
-  .form_container form div:nth-of-type(4) {
-    /* Стилізація для четвертого input (Phone number) */
-    grid-area: item4;
-  }
-  
-  .form_container form div:nth-of-type(5) {
-    /* Стилізація для п'ятого input (Message) */
-    height: 100px;
-    grid-area: item5;
-  }
-  .form_container form div:nth-of-type(6) input {
-     border: 1px solid rgba(255, 255, 255, 0.485);
+.form_container form div:nth-of-type(4) {
+  /* Стилізація для четвертого input (Phone number) */
+  grid-area: item4;
+}
 
-  }
-  .form_container form div:nth-of-type(6) {
-    /* Стилізація для п'ятого input (Message) */
-    grid-area: item6;
-    width: 60%;
-  }
+.form_container form div:nth-of-type(5) {
+  /* Стилізація для п'ятого input (Message) */
+  height: 100px;
+  grid-area: item5;
+}
+.form_container form div:nth-of-type(6) input {
+  border: 1px solid rgba(255, 255, 255, 0.485);
+}
+.form_container form div:nth-of-type(6) {
+  /* Стилізація для п'ятого input (Message) */
+  grid-area: item6;
+  width: 60%;
+}
 
-  @media screen and (max-width: 768px) {
-
-    .form_container h3{
-        font-size: 11vw;
-    }
-    .form_container{
+@media screen and (max-width: 768px) {
+  .form_container h3 {
+    font-size: 11vw;
+  }
+  .form_container {
     margin: 0;
     padding-top: 10%;
     padding-inline: 5%;
-    }
-    .form_container form{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr); 
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "item1 item1"
-        "item2 item2"
-          "item3 item3"
-          "item4 item4"
-          "item5 item5"
-          "item6 item6";
-        width: 100%;
-    }
-    .form_container form div:nth-of-type(6) {
-    width: 100%;
-    }
   }
+  .form_container form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas:
+      "item1 item1"
+      "item2 item2"
+      "item3 item3"
+      "item4 item4"
+      "item5 item5"
+      "item6 item6";
+    width: 100%;
+  }
+  .form_container form div:nth-of-type(6) {
+    width: 100%;
+  }
+}
