--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,4 +1,5 @@
 .image_phone {
+  min-height: 160px;
   height: 30vw;
   position: absolute;
   bottom: -15vw;
@@ -18,6 +19,7 @@
 form * {
   font-family: "Monserrat", "Times New Roman", Times, serif;
   font-weight: 200;
+  color: white;
   font-size: 16px;
 }
 .form_container h3 {
@@ -50,19 +52,18 @@ form * {
   gap: 5%; /* відступ між елементами */
   width: 60%;
 }
-.form_container form div input {
+.form_container form div input, .form_container form div textarea {
   border: 0;
   text-decoration: none;
   width: 100%;
   height: 100%;
-  color: white;
   border-bottom: 1px solid rgba(255, 255, 255, 0.442);
 }
 .form_container form input::placeholder {
   color: rgba(255, 255, 255, 0.467);
 }
 
-.form_container form input:focus {
+.form_container form input:focus, .form_container form textarea:focus {
   outline: none;
   border-color: white;
 }
@@ -93,13 +94,25 @@ form * {
 
 .form_container form div:nth-of-type(5) {
   /* Стилізація для п'ятого input (Message) */
-  height: 100px;
+  height: auto;
   grid-area: item5;
+  /* min-height: 100px; */
 }
+
+textarea {
+  width: 100%; /* Ширина контейнера */
+  min-height: 100px;
+  height: auto; /* Висота підлаштовується під вміст */
+  word-wrap: break-word; /* Переносить слова на новий рядок, якщо вони перевищують ширину */
+  overflow-wrap: break-word; /* Додатковий стиль для переносу */
+  resize: none; /* Можливість змінювати висоту */
+}
+
 .form_container form .submit_button {
   border: 1px solid rgba(255, 255, 255, 0.485);
   color: white;
   font-weight: 100;
+  margin-top: 5%;
   font-size: 1em;
   height: 50px;
   grid-area: item6;
@@ -110,7 +123,7 @@ form * {
   .image_phone {
     /* min-height: 100px; */
     right: 0;
-    bottom: -20vw;
+    bottom: -25vw;
   }
 
   .form_container h3 {
@@ -141,6 +154,6 @@ form * {
 
 @media screen and (max-width: 450px) {
   .image_phone {
-    bottom: -25vw;
+    bottom: -30vw;
   }
 }
